--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ html {
 	top					: 0px;
 	left				: 20%;
 	width				: 60%;
-	background-color	: rgba( 32, 32, 32, 0.75 );
+	background-color	: rgba( 48, 48, 48, 0.75 );
 	/*padding-bottom		: 40px;		/* This must match `#footer : height`. */
 }
 
@@ -114,9 +114,9 @@ html {
 	background-color	: rgb( 0, 0, 0 );
 	height				: 100%;
 	
-	/*background-image	: url( 'images/background.jpg' );*/
-	background-color	: Grey;
-	background-size		: cover;
+	background-image	: url( 'images/background.jpg' );
+	background-color	: Black;
+	background-size		: contain;
 	background-repeat	: no-repeat;
 	background-position	: center top;
 	background-attachment	: fixed;
@@ -183,6 +183,34 @@ html {
 	position			: absolute; 
 	
 	top					: 70%; 
+	left				: 32.5%; 
+	width				: 35%; 
+	padding-top			: 15px;
+	padding-bottom		: 15px;
+	
+	background			: rgb( 32, 32, 32 ); /* fallback color */
+	background			: rgba( 32, 32, 32, 0.75 );
+}
+
+.projectTextSmall
+{
+	position			: absolute; 
+	
+	top					: 65%; 
+	left				: 15%; 
+	width				: 70%; 
+	padding-top			: 15px;
+	padding-bottom		: 15px;
+	
+	background			: rgb( 32, 32, 32 ); /* fallback color */
+	background			: rgba( 32, 32, 32, 0.75 );
+}
+
+.projectTextWideSmall
+{
+	position			: absolute; 
+	
+	top					: 65%; 
 	left				: 32.5%; 
 	width				: 35%; 
 	padding-top			: 15px;
