--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,18 @@
 	letter-spacing		: -2px;
 }
 
+.sectionMiniTitle {
+	margin				: 0;
+	color				: White;
+	
+	font-family			: Helvetica;
+	font-size			: 30px;
+	font-weight			: bold;
+	text-decoration		: none;
+	text-align			: center;
+	letter-spacing		: -2px;
+}
+
 .sectionSubtitle {
 	margin				: 0;
 	color				: White;
@@ -168,7 +180,7 @@ html {
 {
 	position			: absolute; 
 	
-	top					: 70%; 
+	top					: 0%; 
 	left				: 15%; 
 	width				: 70%; 
 	padding-top			: 15px;
@@ -182,7 +194,35 @@ html {
 {
 	position			: absolute; 
 	
-	top					: 70%; 
+	top					: 0%; 
+	left				: 32.5%; 
+	width				: 35%; 
+	padding-top			: 15px;
+	padding-bottom		: 15px;
+	
+	background			: rgb( 32, 32, 32 ); /* fallback color */
+	background			: rgba( 32, 32, 32, 0.75 );
+}
+
+.projectTextMedium
+{
+	position			: absolute; 
+	
+	top					: 0%; 
+	left				: 15%; 
+	width				: 70%; 
+	padding-top			: 15px;
+	padding-bottom		: 15px;
+	
+	background			: rgb( 32, 32, 32 ); /* fallback color */
+	background			: rgba( 32, 32, 32, 0.75 );
+}
+
+.projectTextWideMedium
+{
+	position			: absolute; 
+	
+	top					: 65%; 
 	left				: 32.5%; 
 	width				: 35%; 
 	padding-top			: 15px;
@@ -196,7 +236,7 @@ html {
 {
 	position			: absolute; 
 	
-	top					: 65%; 
+	top					: 0%; 
 	left				: 15%; 
 	width				: 70%; 
 	padding-top			: 15px;
@@ -210,7 +250,7 @@ html {
 {
 	position			: absolute; 
 	
-	top					: 65%; 
+	top					: 50%; 
 	left				: 32.5%; 
 	width				: 35%; 
 	padding-top			: 15px;
