--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,24 @@
 	font-size			: 14px;
 	font-weight			: normal;
 	text-decoration		: none;
-	text-align			: center;
+	text-align			: left;
+	
+	padding-left		: 10px;
+	padding-right		: 10px;
+}
+
+.sectionBodyBold {
+	margin				: 0;
+	color				: White;
+	
+	font-family			: tahoma;
+	font-size			: 14px;
+	font-weight			: bold;
+	text-decoration		: none;
+	text-align			: left;
+	
+	padding-left		: 10px;
+	padding-right		: 10px;
 }
 
 html {
