--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
 
 .sectionBody {
 	margin				: 0;
-	color				: White;
+	color				: rgb( 222, 222, 222 );
 	
 	font-family			: tahoma;
 	font-size			: 14px;
@@ -67,6 +67,14 @@
 
 html {
 	height				: 100%;
+}
+
+a {
+	color				: Orange;
+}
+
+a:hover {
+	color				: Red;
 }
 
 /*-----------------------------------------------------------------------------
